--- a/MauiAppCalc/MainPage.xaml
+++ b/MauiAppCalc/MainPage.xaml
@@ -26,7 +26,8 @@
 
     <ContentPage.Content>
         <Grid RowDefinitions="150, *, *, *, *, *, *"
-             ColumnDefinitions="*, *, *, *">
+              RowSpacing="10" ColumnSpacing="10" Margin="10"
+              ColumnDefinitions="*, *, *, *">
             <Label Grid.Row="0" Grid.Column= "0" Grid.ColumnSpan = "4"
                    x:Name="visor" Text="0" HorizontalTextAlignment="End"
                    VerticalTextAlignment="End" TextColor="White"
@@ -43,8 +44,11 @@
             <Button Grid.Row ="1" Grid.Column="2" 
                     Style="{StaticResource BotaoEscuro}"
                     x:Name="dividir" Text="/" Clicked="dividir_Clicked"/>
-            
-            
+            <Button Grid.Row="1" Grid.Column="3"
+                    Style="{StaticResource BotaoEscuro}"
+                    x:Name="porcento" Text="%" Clicked="porcento_Clicked"/>
+
+
 
             <Button Grid.Row="2" Grid.Column="0"
                      Style="{StaticResource BotaoClaro}"
@@ -55,17 +59,57 @@
             <Button Grid.Row ="2" Grid.Column="2"
                         Style="{StaticResource BotaoClaro}"
                         x:Name="Num9" Text="9" Clicked="Num9_Clicked"/>
-           
-            
+            <Button Grid.Row="2" Grid.Column="3"
+                    Style="{StaticResource BotaoEscuro}"
+                    x:Name="multiplicar" Text="*" Clicked="multiplicar_Clicked"/>
+
+
             <Button Grid.Row="3" Grid.Column="0"
                         Style="{StaticResource BotaoClaro}"
                         x:Name="Num4" Text="4" Clicked="Num4_Clicked"/>
+
             <Button Grid.Row ="3" Grid.Column="1"
                         Style="{StaticResource BotaoClaro}"
                         x:Name="Num5" Text="5" Clicked="Num5_Clicked" />
             <Button Grid.Row="3" Grid.Column="2"
                     Style="{StaticResource BotaoClaro}"
                     x:Name="num6" Text="6" Clicked="num6_Clicked"/>
+            <Button Grid.Row="3" Grid.Column ="3"
+                    Style="{StaticResource BotaoEscuro}"
+                    x:Name="menos" Text="-" Clicked="menos_Clicked"/>
+            
+            
+
+            <Button Grid.Row="4" Grid.Column="0"
+                    Style="{StaticResource BotaoClaro}"
+                    x:Name="num1" Text="1" Clicked="num1_Clicked_1"/>
+
+            <Button Grid.Row="4" Grid.Column="1"
+                  Style="{StaticResource BotaoClaro}"
+                  x:Name="num2" Text="2" Clicked="num2_Clicked_1"/>
+
+            <Button Grid.Row="4" Grid.Column="2"
+                    Style="{StaticResource BotaoClaro}"
+                    x:Name="num3" Text= "3" Clicked="num3_Clicked"/>
+            <Button Grid.Row="4" Grid.Column="3"
+                    Style="{StaticResource BotaoEscuro}"
+                    x:Name="mais" Text="+" Clicked="mais_Clicked"/>
+            
+            
+
+            <Button Grid.Row="5" Grid.Column="0"
+                   Style="{StaticResource BotaoClaro}"
+                   x:Name="num0" Text="0" Clicked="num0_Clicked"/>
+
+            <Button Grid.Row="5" Grid.Column="1"
+                    Style="{StaticResource BotaoClaro}"
+                    x:Name="virgula" Text=","/>
+
+            <Button Grid.Row="5" Grid.Column="3"
+                    Style="{StaticResource BotaoEscuro}"
+                    x:Name="igual" Text="=" Clicked="igual_Clicked"/>
+
+
 
 
 
